<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/selectedAct"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectedContact">

    <Button
        android:id="@+id/callSelectBtn"
        android:layout_width="221dp"
        android:layout_height="56dp"
        android:text="@string/callBtn"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545" />

    <Button
        android:id="@+id/modifySelectBtn"
        android:layout_width="221dp"
        android:layout_height="56dp"
        android:text="@string/modify"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.764" />

    <Button
        android:id="@+id/homeSelectBtn"
        android:layout_width="221dp"
        android:layout_height="56dp"
        android:text="@string/home"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.967" />

    <Button
        android:id="@+id/contactListSelectBtn"
        android:layout_width="221dp"
        android:layout_height="56dp"
        android:text="@string/view"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <Button
        android:id="@+id/deleteSelectBtn"
        android:layout_width="221dp"
        android:layout_height="56dp"
        android:text="@string/delete"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.868" />

    <EditText
        android:id="@+id/phoneSelectedTxt"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:ems="10"
        android:hint="@string/createPhoneNumberHint"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.317"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/lastNameSelectedLbl"
        android:layout_width="153dp"
        android:layout_height="33dp"
        android:focusable="false"
        android:inputType="none"
        android:text="@string/lastName"
        android:textAlignment="textEnd"
        android:textIsSelectable="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.244"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/lastNameSelectedTxt"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:ems="10"
        android:hint="@string/createLastHint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/firstNameSelectedLbl"
        android:layout_width="153dp"
        android:layout_height="33dp"
        android:text="@string/firstName"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/phoneSelectedLbl"
        android:layout_width="153dp"
        android:layout_height="33dp"
        android:text="@string/phoneNumber"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.322"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/firstNameSelectedTxt"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:duplicateParentState="true"
        android:ems="10"
        android:hint="@string/createFirstHint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/contactHeaderSelected"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"
        android:text="@string/selectedHeader"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/backSelectBtn"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/backBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.418"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/forwardSelectBtn"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/forwardBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.895"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.418"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>