<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/preferenceAct"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreferenceActivity">

    <Button
        android:id="@+id/submitPreferencesBtn"
        android:layout_width="240dp"
        android:layout_height="56dp"
        android:text="@string/submitPreferences"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.694" />

    <Button
        android:id="@+id/contactListPreferenceBtn"
        android:layout_width="240dp"
        android:layout_height="56dp"
        android:text="@string/view"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.832" />

    <TextView
        android:id="@+id/colorModePreferenceLbl"
        android:layout_width="226dp"
        android:layout_height="26dp"
        android:text="@string/colorMode"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.302"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/preferenceHeaderPreferenceLbl"
        android:layout_width="372dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="33dp"
        android:text="@string/preferenceHeaderLbl"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/requirePasswordPreferenceLbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/requirePasswordPreferenceLbl"
        android:layout_width="270dp"
        android:layout_height="32dp"
        android:text="@string/requirePassword"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.178"
        tools:ignore="TextContrastCheck" />

    <Switch
        android:id="@+id/requiresPasswordPreferenceSwitch"
        android:layout_width="59dp"
        android:layout_height="51dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.798"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17" />

    <RadioGroup
        android:id="@+id/radioPreferenceGroup"
        android:layout_width="228dp"
        android:layout_height="145dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428">

        <RadioButton
            android:id="@+id/colorfulPreferenceRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/colorfulMode" />

        <RadioButton
            android:id="@+id/darkPreferenceRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/darkMode" />

        <RadioButton
            android:id="@+id/lightPreferenceMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lightMode" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>